syntax = "proto3";
package yazzyyaz.wordle.wordle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "wordle/params.proto";
import "wordle/wordle.proto";
import "wordle/guess.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/YazzyYaz/wordle/x/wordle/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/YazzyYaz/wordle/wordle/params";
  }
  // Queries a Wordle by index.
	rpc Wordle(QueryGetWordleRequest) returns (QueryGetWordleResponse) {
		option (google.api.http).get = "/YazzyYaz/wordle/wordle/wordle/{index}";
	}

	// Queries a list of Wordle items.
	rpc WordleAll(QueryAllWordleRequest) returns (QueryAllWordleResponse) {
		option (google.api.http).get = "/YazzyYaz/wordle/wordle/wordle";
	}

// Queries a Guess by index.
	rpc Guess(QueryGetGuessRequest) returns (QueryGetGuessResponse) {
		option (google.api.http).get = "/YazzyYaz/wordle/wordle/guess/{index}";
	}

	// Queries a list of Guess items.
	rpc GuessAll(QueryAllGuessRequest) returns (QueryAllGuessResponse) {
		option (google.api.http).get = "/YazzyYaz/wordle/wordle/guess";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetWordleRequest {
	  string index = 1;

}

message QueryGetWordleResponse {
	Wordle wordle = 1 [(gogoproto.nullable) = false];
}

message QueryAllWordleRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllWordleResponse {
	repeated Wordle wordle = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetGuessRequest {
	  string index = 1;

}

message QueryGetGuessResponse {
	Guess guess = 1 [(gogoproto.nullable) = false];
}

message QueryAllGuessRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllGuessResponse {
	repeated Guess guess = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
